Wed Oct 27 08:00:33 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor_Impl.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Completion_Handler.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connection_Handler.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector_Impl.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Endpoint.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Factory.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Profile.h:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Transport.h:

          Semi-colons are not required on the closing brace of a namespace
          and cause errors on a few compilers.

Wed Oct 27 07:15:25 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/HTIOP/AMI/client.cpp:
        * orbsvcs/tests/HTIOP/AMI/server.cpp:
        * orbsvcs/tests/HTIOP/AMI/simple_client.cpp:

          Removed unnessesary CORBA environment arguments from
          ACE_OS::socket_init().

        * orbsvcs/tests/HTIOP/BiDirectional/server.cpp:

          Added a necessary CORBA environment argument.

Tue Oct 26 13:42:16 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        * orbsvcs/IFR_Service/ifr_adding_visitor_structure.cpp:
        * orbsvcs//IFRService/ModuleDef_i.cpp:

          Cosmetic changes.

        * orbsvcs/orbsvcs/IFRService/Contained_i.cpp:
        * orbsvcs/orbsvcs/IFRService/Contained_i.h:
        * orbsvcs/orbsvcs/IFRService/IRObject_i.cpp:
        * orbsvcs/orbsvcs/IFRService/IRObject_i.h:

          Fixed a bug in entering a nested struct or union into the IFR.
          The IFR create_* methods for structs and unions require a
          list of members to be passed. If one of the members is also
          defined in the same scope, there is a problem because the
          scope itself hasn't been defined yet in the IFR. So an entry