@@ -1,3 +1,10 @@
+Wed Oct 27 09:03:24 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor_Impl.cpp:
+
+          Make this code compilable.  So far, I've only seen aCC attempt to
+          build it.
+
 Wed Oct 27 08:00:33 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor.h:
